feat: 全量对齐 Bell 与 RuoYi 6.x 契约